# HaplyAdaptiveSharedControl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docker-build.yml  pre-commit.yml
analysis/: authority_disagreement_analysis.py  main_analysis.py  mpc_weight_analysis.py  preprocess.py  trajectory_analysis.py
docker/: Dockerfile  Dockerfile.dockerignore  compose.yaml  ros_entrypoint.sh
scripts/: setup_ros_workspace.sh
src/: README.md
src/control_node/: README.md  package.xml  setup.py
src/control_node/config/: mpc.yaml  state_feedback.yaml
src/control_node/control_node/: __init__.py  adaptive_controller.py  control_node.py  controller.py  controller_interface.py  debug_visualizer.py  mpc_control_node.py  state_feedback_control_node.py  test_control_node_output.py
src/control_node/control_node/controller/: controller.py
src/control_node/control_node/mpc_controller/: adaptive_mpc_controller.py  batch_predictor.py  constraints.py  costfunction.py  linear_system_model.py  mpc_controller.py  optimization.py
src/control_node/control_node/mpc_controller/_docs/: README.md  mpc_components.md
src/control_node/control_node/state_feedback_controller/: adaptive_state_feedback_controller.py  state_feedback_controller.py  virtual_fixture_controller.py
src/control_node/control_node/state_feedback_controller/_docs/: state_feedback_components.md
src/control_node/launch/: control_debug_launch.py  haply_control_debug_launch.py  mouse_control_debug_launch.py
src/control_node/test/: test_controller.py  test_mpc_runtime.py  test_state_feedback_controller.py  test_virtual_fixture_state_feedback.py
src/data_logger/: README.md  package.xml  setup.py
src/data_logger/data_logger/: csv_logger.py  data_logger_node.py
src/data_logger/test/: test_data_logger_task_readiness.py
src/data_logger_node/: package.xml  setup.cfg  setup.py
src/data_logger_node/data_logger_node/: csv_logger.py  data_logger_node.py
src/estimator_node/: README.md  package.xml  setup.cfg  setup.py
src/estimator_node/estimator_node/: estimator_node.py
src/estimator_node/estimator_node/estimator/: __init__.py  rls_estimator.py
src/estimator_node/test/: test_estimator.py  test_estimator_task_readiness.py  test_flake8.py
src/haply_ros2_interface/: README.md
src/haply_ros2_interface/haply_demos/: CMakeLists.txt  README_haply_interface.md  package.xml
src/haply_ros2_interface/haply_demos/launch/: PID_test.launch.py  handle_state_read.launch.py  haply_state_read.launch.py  haptic_ball.launch.py  inverse3_state_read.launch.py  rviz_visualization.launch.py  target_position_input.launch.py  target_position_sinus.launch.py
src/haply_ros2_interface/haply_interface/: README_demo_nodes.md  README_drivers.md  README_visualization.md  package.xml  setup.cfg  setup.py
src/haply_ros2_interface/haply_interface/haply_interface/daVinci/: cartesian_motion.py  move_arm.py
src/haply_ros2_interface/haply_interface/haply_interface/demo_nodes/: PID_test.py  haptic_ball.py  state_subscriber_handle.py  (+4 more)
src/haply_ros2_interface/haply_meshes/: CMakeLists.txt  package.xml
src/haply_ros2_interface/haply_meshes/meshes/: ArrowY.stl
src/haply_ros2_interface/haply_msgs/: CMakeLists.txt  package.xml
src/haply_ros2_interface/haply_msgs/msg/: HandleButtons.msg  HandleState.msg  HaplyControl.msg  HaplyState.msg  Inverse3State.msg  StudyAbortRequest.msg  StudyButtonPress.msg  StudyCursor.msg  StudyDwellProgress.msg  StudySession.msg  StudyStartRequest.msg  StudyTask.msg  StudyTrialState.msg
src/haply_study_gui/: README.md  package.xml  setup.cfg  setup.py
src/haply_study_gui/haply_study_gui/: __init__.py  dummy_scenario_generator_node.py  study_gui_node.py  study_launch.py
src/haply_study_gui/haply_study_gui/tests/: __init__.py  test_haply_state_topic.py  test_inverse3_state_topic.py
src/haply_study_gui/launch/: study_gui.launch.py  study_gui_haply_test.launch.py  study_gui_mouse.launch.py
src/haply_study_gui/test/: conftest.py  test_deferred_display.py  test_study_gui_start_gate.py
src/rls_estimator_node/: package.xml  setup.cfg  setup.py
src/rls_estimator_node/rls_estimator_node/: rls_estimator_node.py
src/rls_estimator_node/rls_estimator_node/estimator/: rls_estimator.py
src/rls_estimator_node/test/: test_estimator.py
src/study_analysis/: README.md  package.xml  setup.cfg  setup.py
src/study_analysis/config/: benchmark.yaml
src/study_analysis/study_analysis/: __init__.py  benchmark.py  cli.py  loader.py  metrics.py  report.py
src/study_analysis/test/: test_benchmark.py  test_cli.py  test_copyright.py  test_flake8.py  test_loader.py  test_metrics.py  test_pep257.py
src/study_orchestration/: README.md  package.xml  setup.cfg  setup.py
src/study_orchestration/config/: default_tasks.yaml  study_base.yaml  study_haply.yaml  study_mouse.yaml
src/study_orchestration/study_orchestration/: __init__.py  experiment_mapper_node.py  mapper_logic.py  scenario_generator_node.py  scenario_logic.py
src/study_orchestration/test/: test_experiment_mapper_node.py  test_gui_mouse_end_to_end_launch.py  test_late_readiness_launch.py  test_mapper_logic.py  test_mouse_interaction_launch.py  test_mpc_safety_launch.py  test_scenario_generator_node.py  test_scenario_logic.py  test_state_feedback_safety_launch.py
src/test_nodes/test_data_logger/: package.xml  setup.cfg  setup.py
src/test_nodes/test_data_logger/test/: test_flake8.py
src/test_nodes/test_data_logger/test_data_logger/: test_node_data_logger.py
src/test_nodes/test_estimator_control/: package.xml  setup.cfg  setup.py
src/test_nodes/test_estimator_control/test_estimator_control/: test_estimator_node.py
(+5 files in other folders)
