<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>study_analysis</name>
  <version>0.1.0</version>
  <description>Reproducible analysis and deterministic validation for Haply studies.</description>
  <maintainer email="ltorquato@users.noreply.github.com">Luisa Torquato Niño</maintainer>
  <license>UNLICENSED</license>

  <exec_depend>control_node</exec_depend>
  <exec_depend>estimator_node</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
