<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>study_orchestration</name>
  <version>0.0.0</version>
  <description>Scenario rollout and input mapping nodes for Haply shared-control studies.</description>
  <maintainer email="ltorquato@users.noreply.github.com">Luisa Torquato Niño</maintainer>
  <license>UNLICENSED</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>haply_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
